Add line return after MODRDN in LDIF output

--- a/src/test/resources/resources/lsc_en_US.properties
+++ b/src/test/resources/resources/lsc_en_US.properties
@@ -7,7 +7,7 @@ org.lsc.messages.NB_CHANGES = All entries: {0}, to modify entries: {1}, modified
 org.lsc.messages.SYNC_ERROR = Error while synchronizing {0}: {1}\n{2}
 
 org.lsc.utils.LocalizedJndiModificationsLayout.ADD_ENTRY = dn: {0}\nchangetype: add\n{1}
-org.lsc.utils.LocalizedJndiModificationsLayout.MODRDN_ENTRY = dn: {0}\nchangetype: modrdn\nnewrdn: {1}\ndeleteoldrdn: 1\nnewsuperior: {2}
+org.lsc.utils.LocalizedJndiModificationsLayout.MODRDN_ENTRY = dn: {0}\nchangetype: modrdn\nnewrdn: {1}\ndeleteoldrdn: 1\nnewsuperior: {2}\n
 org.lsc.utils.LocalizedJndiModificationsLayout.MODIFY_ENTRY = dn: {0}\nchangetype: modify\n{1}
 org.lsc.utils.LocalizedJndiModificationsLayout.REMOVE_ENTRY = dn: {0}\nchangetype: delete\n
 
