--- a/src/install/debian/changelog
+++ b/src/install/debian/changelog
@@ -1,3 +1,9 @@
+lsc (2.1.3-1) unstable; urgency=low
+
+  * Update to 2.1.3
+
+ -- Clement Oudot (LTB-project) <clem.oudot@gmail.com>  Tue, 03 Mar 2015 12:00:00 +0100
+
 lsc (2.1.2-1) unstable; urgency=low
 
   * Update to 2.1.2
