--- a/src/install/debian/changelog
+++ b/src/install/debian/changelog
@@ -1,3 +1,9 @@
+lsc (2.1.4-1) unstable; urgency=low
+
+  * Update to 2.1.4
+
+ -- Clement Oudot (LTB-project) <clem.oudot@gmail.com>  Sat, 25 Mar 2017 12:00:00 +0100
+
 lsc (2.1.3-1) unstable; urgency=low
 
   * Update to 2.1.3
