--- a/src/install/debian/changelog
+++ b/src/install/debian/changelog
@@ -1,3 +1,9 @@
+lsc (2.1.5-1) unstable; urgency=low
+
+  * Update to 2.1.5
+
+ -- Clement Oudot (LTB-project) <clem.oudot@gmail.com>  Thu, 20 Feb 2020 12:00:00 +0100
+
 lsc (2.1.4-1) unstable; urgency=low
 
   * Update to 2.1.4
