--- a/src/install/debian/changelog
+++ b/src/install/debian/changelog
@@ -1,3 +1,9 @@
+lsc (2.2.0-1) unstable; urgency=low
+
+  * Update to 2.2.0
+
+ -- Clement Oudot (LTB-project) <clem.oudot@gmail.com>  Tue, 24 Aug 2021 12:00:00 +0100
+
 lsc (2.1.6-1) unstable; urgency=low
 
   * Update to 2.1.6
