Update extension change for windows scripts in all files

--- a/doc/man/man1/lsc-agent.1
+++ b/doc/man/man1/lsc-agent.1
@@ -2,7 +2,7 @@
 .SH NAME
 lsc-agent \- LSC remote command
 .SH SYNOPSIS
-\fB $LSC_HOME/bin/lsc-agent or $LSC_HOME/bin/lsc-agent.bat \f1
+\fB $LSC_HOME/bin/lsc-agent or $LSC_HOME/bin/lsc-agent.cmd \f1
 .SH DESCRIPTION
 lsc-agent is the remote command line tool used to achieve various action againt a daemonized LSC. It can start or stop an asynchronous task, force a synchronous task on a particular, check LSC status. It supposes that the main LSC instance has been started by a \fBlsc(1)\f1 command. Connections and synchronization options are defined in \fBlsc.xml(5)\f1 file. 
 
