--- a/doc/man/man1/lsc.1
+++ b/doc/man/man1/lsc.1
@@ -2,7 +2,7 @@
 .SH NAME
 lsc \- LSC command
 .SH SYNOPSIS
-\fB $LSC_HOME/bin/lsc or $LSC_HOME/bin/lsc.bat \f1
+\fB $LSC_HOME/bin/lsc or $LSC_HOME/bin/lsc.cmd \f1
 .SH DESCRIPTION
 lsc is the command line that will launch LSC synchronization engine. It may be a run-and-stop or a run-and-block command depending on the synchronization mode. Connections and synchronization options are defined in \fBlsc.xml(5)\f1 file. 
 
